fix iOS scaling text too small trial 2

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -38,7 +38,7 @@ body {
     font-size: 1.5rem;
     color: var(--dark-color);
     line-height: 1.5;
-    -webkit-text-size-adjust: 100%;
+    /* -webkit-text-size-adjust: 100%; */
 }
 
 *, *::before, *::after {
@@ -98,6 +98,7 @@ a {
 
 #menu-control {
     display: none;
+    font-family: "Arial", "Helvetica", "Noto Sans", sans-serif;
 }
 
 nav {
